Bug fixes for animations
Visible changes:
* The tree root enters directly at its final position and does not
  move during the entry animation
* For orientations bottom-to-top and right-to-left, the links between
  nodes were animated in from the wrong opposite side of the canvas.
  Now they are animated in from the correct side
* The exit animation of all nodes for orientations != top-to-bottom
  were going in the wrong direction.
* The tree canvas is positioned at bit higher.  So far, it was
  positioned slightly too low, so that the tree root was not visible
  for orientation bottom-to-top.

The underlying issue was confusing about when ooo.x/y should be called.
ooo.x/y transforms the coordinates from the logical coordinates to the
coordinates on the canvas.
The convention is that node.x/y store logical coordinates while
node.x0/y0 store canvas coordinates. Hence, when using node.x/y, one
must use ooo to map them to canvas coordinates. On the other hand, x0/y0
should be used directly without applying ooo.
So far, ooo was used inconsistently. This commit uses it correctly now.

Also, the entrance animation in orientRoot interacted badly wiht the
entrance animations of the individual nodes. Hence, I remove it.

--- a/d3/query-graphs.css
+++ b/d3/query-graphs.css
@@ -6,7 +6,6 @@ html, body {
 }
 #tree-container {
   padding: 0px;
-  padding-top: 53px;
   width: 100%;
   background: #fff;
   margin: 0 auto;
